HAWQ-272. Quit resource manager process on segment if postmaster is not alive